# moleculefinder-etl

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: etl.yml
data/seed/: canon.parquet
data/snapshots/: index.json  roam.json  worlds.json
data/snapshots/leaderboards/: biggest.json  deadliest.json  hottest.json  index.json  most-caffeinated.json  pungent.json  spiciest.json  sweetest.json
data/snapshots/molecules/: 11-cis-retinal.json  2-4-6-trinitrotoluene.json  2-nonenal.json  4-aminobenzoic-acid.json  5-hydroxytryptophan.json  9-methyl-beta-carboline.json  acemannan.json  acesulfame-potassium.json  acetaldehyde.json  acetaminophen.json  acetic-acid.json  acetone.json  acetophenone.json  acetyl-coa.json  acetylcarnitine.json  acetylcholine.json  acrylamide.json  agar.json  (+517 more)
moleculefinder_etl/: __init__.py  cli.py  config.py  pipeline.py
moleculefinder_etl/load/: snapshot_export.py  supabase_loader.py
moleculefinder_etl/sources/: pageviews.py  pubchem.py  registry.py  wikidata.py
moleculefinder_etl/transform/: assemble.py  buckets.py  canon.py  categories.py  confidence.py  families.py  ghs.py  hooks.py  leaderboards.py  names.py  relationships.py  roam_layout.py  similarity.py  slugs.py  structures.py  toxicity.py
supabase/migrations/: 0001_init.sql  0002_events.sql  0003_grants.sql
tests/: fixtures.py  test_assemble.py  test_confidence.py  test_ghs.py  test_handmodel_integration.py  test_household_seed.py  test_load.py  test_registry.py  test_relationships.py  test_scope_b_canon.py  test_slugs.py  test_toxicity.py
(+76 files in other folders)
